tests/tables/fails/parser/unexpected_tokens.tbl
# CHECK: fails/parser/unexpected_tokens.tbl(4,11): error: Expected =, got @
# CHECK: table foo @ = []
# CHECK:           ^
table foo @ = []
